tests/valid/circular_ref_deep.py
from fhir_types import FHIR_QuestionnaireResponse_Answer

q: FHIR_QuestionnaireResponse_Answer = {"valueString": "1234"}
