tests/invalid/bad_property.py
from fhir_types import FHIR_Patient

p: FHIR_Patient = {"esourceType": "Patient"}
